--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         run: cargo fmt --all --check
 
       - name: Clippy
-        run: clippy --tests -- -D warnings
+        run: cargo clippy --tests -- -D warnings
 
       - name: Test
         run: cargo test --locked
