--- a/crates/generate-random-value/Cargo.toml
+++ b/crates/generate-random-value/Cargo.toml
@@ -10,5 +10,5 @@ keywords = { workspace = true }
 
 [dependencies]
 rand = { workspace = true }
-envconfig = { workspace = true }
+clap = { workspace = true }
 dotenvy = { workspace = true }
