--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ resolver = "2"
 [workspace.package]
 version = "0.1.0"
 authors = ["Denis Lavrentev"]
-license = "Apache-2.0-or-MIT"
+license = "MIT AND Apache-2.0"
 edition = "2021"
 repository = "https://github.com/defernus/rust-workspace-preset"
 keywords = ["boilerplate", "workspace", "example", "preset"]
