--- a/crates/generate-random-value/Cargo.toml
+++ b/crates/generate-random-value/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "generate-random-value"
-version = { workspace = true }
-authors = { workspace = true }
-license = { workspace = true }
-edition = { workspace = true }
-repository = { workspace = true }
-keywords = { workspace = true }
+version.workspace = true
+authors.workspace = true
+license.workspace = true
+edition.workspace = true
+repository.workspace = true
+keywords.workspace = true
 
 
 [dependencies]
-rand = { workspace = true }
-clap = { workspace = true }
-dotenvy = { workspace = true }
+rand.workspace = true
+clap.workspace = true
+dotenvy.workspace = true
